maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: not found: value MondeLargeur
  if(x<MondeLargeur()-1){
       ^JediEscaper:26: error: not found: value MondeHauteur
  if(y<MondeHauteur()-1){
       ^