maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  if(aMurNord(2,2)){
    setIndication(2,2,42)
  }
  prop(2,2)
}

def prop(x:Int,y:Int){
  var marquage:Int=getIndication(x,y)
  if(y>0){
    if (!aMurNord(x,y) && !(getIndication(x,y-1)<=marquage)){
      setIndication(x,y-1,marquage+1)
    }
  }
  if(x>0){
    if(!aMurOuest(x,y) && !(getIndication(x-1,y)<=marquage)){
      setIndication(x-1,y,marquage+1)
    }
  }
  if(x<MondeLargeur()-1){
    if(!aMurOuest(x+1,y) && !(getIndication(x+1,y)<=marquage)){
      setIndication(x+1,y,marquage+1)
    }
  }
  if(y<MondeHauteur()-1){
    if (!aMurNord(x,y+1) && !(getIndication(x,y+1)<=marquage)){
      setIndication(x,y+1,marquage+1)
    }
  }
}